--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 NODE_ENV=development
-PORT=8082
+OUR=8082
 MONGODB_URL=mongodb+srv://admin:dxa88dxa@xflix-node.ktaiu.mongodb.net/xflix?retryWrites=true&w=majority
